Closed Bug 1150639 Opened 9 years ago Closed 9 years ago

Assertion failure: CurrentThreadCanAccessRuntime(this), at js/src/vm/Runtime.h:1214 while loading facebook.com

Categories

(Core :: JavaScript: GC, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: dbaron, Assigned: terrence)

Details

(Keywords: assertion, crash)

Attachments

(3 files)

I just hit:

Assertion failure: CurrentThreadCanAccessRuntime(this), at /home/dbaron/builds/ssd/mozilla-central/mozilla/js/src/vm/Runtime.h:1214

while loading https://www.facebook.com/ (although I don't know for sure that that's what was responsible).

I'll attach a bunch of info from gdb.
And the build is a Linux-64 debug build with my local SourceStamp=ac228ee7e0c8 which means e5b72a8edb82 plus my local patch queue as of Wed Apr 01 10:10:50 2015 -0700.
We do not currently allow off-main-thread allocations to trigger a GC. I suppose we could, relatively easily, but we do not at the moment. It seems that the check in triggerZoneGC for off-threadedness -- zone->usedByExclusiveThread -- is not strong enough, as the exclusive thread can also make allocations in the atoms compartment. I guess we need to use CurrentThreadCanAccessRuntime here instead.

Brian, do you concur?
Assignee: nobody → terrence
Status: NEW → ASSIGNED
Attachment #8587587 - Flags: review?(bhackett1024)
Attachment #8587587 - Flags: review?(bhackett1024) → review+
https://hg.mozilla.org/mozilla-central/rev/6e3ac2181e52
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: