Bug 1150639 - Use a stricter off-thread check in triggerZoneGC; r=bhackett

--HG--
extra : rebase_source : 0809eefef240aa0cb998819afcaaf91c505479a1